add TCGA gene expression and methylation import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,12 @@
 
 export(fit_glm)
 export(fit_surv)
+export(format_results.stanfit)
+export(format_results.stanreg)
 export(get_tcga_clinical)
+export(get_tcga_gene_expression)
+export(get_tcga_methylation_450k)
 export(get_tcga_somatic_mutations)
-import(magrittr)
 import(readr)
 import(rstan)
 import(rstanarm)
