add copy number data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fit_surv)
 export(format_results.stanfit)
 export(format_results.stanreg)
 export(get_tcga_clinical)
+export(get_tcga_copy_number_gene)
 export(get_tcga_gene_expression)
 export(get_tcga_methylation_450k)
 export(get_tcga_somatic_mutations)
