--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ export(get_tcga_copy_number_gene)
 export(get_tcga_gene_expression)
 export(get_tcga_methylation_450k)
 export(get_tcga_somatic_mutations)
+import(assertthat)
+import(dplyr)
 import(readr)
 import(rstan)
 import(rstanarm)
 import(survival)
+import(tidyr)
